--- a/app/package.json
+++ b/app/package.json
@@ -56,6 +56,7 @@
     "pretty-bytes": "^6.1.1",
     "psl": "https://github.com/lupomontero/psl",
     "svelte-collections": "^1.2.4",
+    "stanza": "^12.19.0",
     "svelte-icon": "^2.0.0",
     "timezone-picker-svelte": "^1.0.2",
     "tiptap-extension-resize-image": "^1.2.1",
