--- a/app/package.json
+++ b/app/package.json
@@ -22,9 +22,6 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.0.0",
-    "@formatjs/intl": "^3.1.4",
-    "@lingui/core": "^4.11.1",
-    "@lingui/vite-plugin": "^4.11.1",
     "@popperjs/core": "^2.11.8",
     "@sentry/svelte": "^8.15.0",
     "@sentry/vite-plugin": "^2.22.6",
@@ -60,7 +57,6 @@
     "pretty-bytes": "^6.1.1",
     "psl": "https://github.com/lupomontero/psl",
     "svelte-collections": "^1.2.4",
-    "svelte-i18n-lingui": "^0.1.7",
     "svelte-icon": "^2.0.0",
     "timezone-picker-svelte": "^1.0.2",
     "ws": "^8.16.0"
@@ -69,6 +65,7 @@
     "@crowdin/cli": "^4.0.0",
     "@lingui/cli": "^4.11.1",
     "@lingui/format-json": "^4.11.1",
+    "@rollup/plugin-replace": "^6.0.2",
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "@tsconfig/svelte": "^3.0.0",
     "adm-zip": "^0.5.12",
