--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
     "@tiptap/starter-kit": "^2.2.2",
     "@types/dompurify": "^3.0.5",
     "@types/nodemailer": "^6.4.14",
+    "@ultraq/icu-message-formatter": "^0.14.3",
     "@xmpp-plugins/roster": "^1.2.0",
     "@xmpp/client": "^0.13.4",
     "axios": "^1.6.2",
@@ -58,7 +59,6 @@
     "psl": "https://github.com/lupomontero/psl",
     "svelte-collections": "^1.2.4",
     "svelte-icon": "^2.0.0",
-    "svelte-icu-l10n": "https://github.com/mustang-im/svelte-icu-l10n",
     "timezone-picker-svelte": "^1.0.2",
     "ws": "^8.16.0"
   },
@@ -76,6 +76,7 @@
     "simple-svelte-autocomplete": "^2.5.2",
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
+    "svelte-i18n-lingui": "^0.2.2",
     "svelte-popperjs": "^1.3.2",
     "tslib": "^2.5.0",
     "typescript": "^4.9.3",
