--- a/e2/package.json
+++ b/e2/package.json
@@ -46,6 +46,7 @@
     "eslint": "^8.47.0",
     "eslint-plugin-svelte": "^2.32.4",
     "i18n": "^0.8.3",
+    "node-gyp": "^11.1.0",
     "prettier": "^3.0.2",
     "prettier-plugin-svelte": "^3.0.3",
     "svelte": "^4.2.0",
