Translation: Use lightweight L10n lib (#453)

--- a/app/package.json
+++ b/app/package.json
@@ -9,12 +9,9 @@
     "preview": "vite preview",
     "test": "vitest",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "l10n": "npm run l10n:extract && npm run l10n:placeholder && npm run l10n:compile",
     "l10n:extract": "lingui extract",
-    "l10n:extract:template": "lingui extract-template",
     "l10n:placeholder": "npx json-autotranslate --input l10n/locales --service dry-run --delete-unused-strings --type key-based --exclude **/*-compiled.json",
     "l10n:auto-translate": "npx json-autotranslate --input l10n/locales --service deepl-free --config $DEEPL_API_KEY,default,1000 --delete-unused-strings --type key-based --exclude **/*-compiled.json",
-    "l10n:compile": "lingui compile",
     "l10n:crowdin": "cd l10n && crowdin",
     "l10n:sync": "cd l10n && crowdin push && crowdin pull",
     "l10n:sync:sources": "cd l10n && crowdin push",
@@ -22,9 +19,6 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.0.0",
-    "@formatjs/intl": "^3.1.4",
-    "@lingui/core": "^4.11.1",
-    "@lingui/vite-plugin": "^4.11.1",
     "@popperjs/core": "^2.11.8",
     "@sentry/svelte": "^8.15.0",
     "@sentry/vite-plugin": "^2.22.6",
@@ -40,6 +34,7 @@
     "@tiptap/starter-kit": "^2.2.2",
     "@types/dompurify": "^3.0.5",
     "@types/nodemailer": "^6.4.14",
+    "@ultraq/icu-message-formatter": "^0.14.3",
     "@xmpp-plugins/roster": "^1.2.0",
     "@xmpp/client": "^0.13.4",
     "axios": "^1.6.2",
@@ -60,7 +55,6 @@
     "pretty-bytes": "^6.1.1",
     "psl": "https://github.com/lupomontero/psl",
     "svelte-collections": "^1.2.4",
-    "svelte-i18n-lingui": "^0.1.7",
     "svelte-icon": "^2.0.0",
     "timezone-picker-svelte": "^1.0.2",
     "ws": "^8.16.0"
@@ -78,6 +72,7 @@
     "simple-svelte-autocomplete": "^2.5.2",
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
+    "svelte-i18n-lingui": "^0.2.2",
     "svelte-popperjs": "^1.3.2",
     "tslib": "^2.5.0",
     "typescript": "^4.9.3",
