--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "l10n:extract": "lingui extract",
+    "l10n:extract": "vite build --config l10n/vite.config.ts",
     "l10n:placeholder": "npx json-autotranslate --input l10n/locales --service dry-run --delete-unused-strings --type key-based --exclude **/*-compiled.json",
     "l10n:auto-translate": "npx json-autotranslate --input l10n/locales --service deepl-free --config $DEEPL_API_KEY,default,1000 --delete-unused-strings --type key-based --exclude **/*-compiled.json",
     "l10n:crowdin": "cd l10n && crowdin",
@@ -42,6 +42,7 @@
     "email-addresses": "^5.0.0",
     "html-to-text": "^9.0.5",
     "ini": "^4.1.2",
+    "js-sha256": "^0.11.0",
     "ky": "^1.7.4",
     "lodash": "^4.17.21",
     "lowlight": "^3.1.0",
@@ -61,18 +62,17 @@
   },
   "devDependencies": {
     "@crowdin/cli": "^4.0.0",
-    "@lingui/cli": "^4.11.1",
-    "@lingui/format-json": "^4.11.1",
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "@tsconfig/svelte": "^3.0.0",
+    "@typescript-eslint/typescript-estree": "^8.25.0",
     "adm-zip": "^0.5.12",
+    "estree-walker-ts": "^1.1.0",
     "happy-dom": "^16.0.0",
     "html-formatter": "^0.1.9",
     "json-autotranslate": "https://github.com/mustang-im/json-autotranslate",
     "simple-svelte-autocomplete": "^2.5.2",
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
-    "svelte-i18n-lingui": "^0.2.2",
     "svelte-popperjs": "^1.3.2",
     "tslib": "^2.5.0",
     "typescript": "^4.9.3",
