--- a/app/package.json
+++ b/app/package.json
@@ -61,18 +61,19 @@
   },
   "devDependencies": {
     "@crowdin/cli": "^4.0.0",
-    "@lingui/cli": "^4.11.1",
+    "@lingui/cli": "^5.2.0",
     "@lingui/format-json": "^4.11.1",
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "@tsconfig/svelte": "^3.0.0",
+    "@typescript-eslint/typescript-estree": "^8.25.0",
     "adm-zip": "^0.5.12",
+    "estree-walker-ts": "^1.1.0",
     "happy-dom": "^16.0.0",
     "html-formatter": "^0.1.9",
     "json-autotranslate": "https://github.com/mustang-im/json-autotranslate",
     "simple-svelte-autocomplete": "^2.5.2",
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
-    "svelte-i18n-lingui": "^0.2.2",
     "svelte-popperjs": "^1.3.2",
     "tslib": "^2.5.0",
     "typescript": "^4.9.3",
