--- a/app/package.json
+++ b/app/package.json
@@ -67,6 +67,7 @@
     "@typescript-eslint/typescript-estree": "^8.25.0",
     "adm-zip": "^0.5.12",
     "estree-walker-ts": "^1.1.0",
+    "glob": "^11.0.1",
     "happy-dom": "^16.0.0",
     "html-formatter": "^0.1.9",
     "json-autotranslate": "https://github.com/mustang-im/json-autotranslate",
@@ -75,6 +76,7 @@
     "svelte-check": "^2.10.3",
     "svelte-popperjs": "^1.3.2",
     "tslib": "^2.5.0",
+    "tsx": "^4.19.3",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-conditional-compile": "^1.4.5",
