--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "svelte.plugin.svelte.compilerWarnings": {
     "a11y-autofocus": "ignore",
     "a11y-mouse-events-have-key-events": "ignore",
+    "a11y-click-events-have-key-events": "ignore",
+    "a11y-no-noninteractive-tabindex": "ignore"
   }
 }
