--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,8 @@
     "test": "vitest",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "l10n:extract": "npx tsx l10n/extractor/extractor.ts",
-    "l10n:placeholder": "npx json-autotranslate --input l10n/locales --service dry-run --delete-unused-strings --type key-based --exclude **/*-compiled.json",
-    "l10n:auto-translate": "npx json-autotranslate --input l10n/locales --service deepl-free --config $DEEPL_API_KEY,default,1000 --delete-unused-strings --type key-based --exclude **/*-compiled.json",
+    "l10n:placeholder": "npx mustang-autotranslate --input l10n/locales --service dry-run --delete-unused-strings --type key-based --exclude **/*-compiled.json",
+    "l10n:auto-translate": "npx mustang-autotranslate --input l10n/locales --service deepl-free --config $DEEPL_API_KEY,default,1000 --delete-unused-strings --type key-based --exclude **/*-compiled.json",
     "l10n:crowdin": "cd l10n && crowdin",
     "l10n:sync": "cd l10n && crowdin push && crowdin pull",
     "l10n:sync:sources": "cd l10n && crowdin push",
@@ -71,7 +71,7 @@
     "glob": "^11.0.1",
     "happy-dom": "^16.0.0",
     "html-formatter": "^0.1.9",
-    "json-autotranslate": "https://github.com/mustang-im/json-autotranslate",
+    "mustang-autotranslate": "^1.15.0",
     "simple-svelte-autocomplete": "^2.5.2",
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
