--- a/.github/workflows/auto-translate.yml
+++ b/.github/workflows/auto-translate.yml
@@ -16,11 +16,11 @@ jobs:
       with:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
         node-version: 20.x
-#        cache: 'npm'
-    - run: cd lib; npm install
-    - run: cd app; npm install --legacy-peer-deps
-    - run: cd app; npm run l10n:extract
-    - run: cd app; npm run l10n:auto-translate
+
+    - run: cd lib; yarn install
+    - run: cd app; yarn install
+    - run: cd app; yarn run l10n:extract
+    - run: cd app; yarn run l10n:auto-translate
       env:
         DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
     - name: Commit translations
