--- a/.github/workflows/installer-linux.yml
+++ b/.github/workflows/installer-linux.yml
@@ -18,13 +18,13 @@ jobs:
       with:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
         node-version: 20.x
-#        cache: 'npm'
+
     - run: cd app/build; sh mustang-brand.sh
-    - run: cd app; npm install --legacy-peer-deps
-    - run: cd lib; npm install
-    - run: cd backend; npm install
-    - run: cd e2; npm install --legacy-peer-deps
-    - run: cd e2; npm run build:release:linux
+    - run: cd app; yarn install
+    - run: cd lib; yarn install
+    - run: cd backend; yarn install
+    - run: cd e2; yarn install
+    - run: cd e2; yarn run build:release:linux
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
