--- a/.github/workflows/installer-mac.yml
+++ b/.github/workflows/installer-mac.yml
@@ -17,17 +17,17 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 20.x
-#        cache: 'npm'
+
     - run: sudo -H pip install setuptools
     - run: cd app/build; sh mustang-brand.sh
-    - run: cd app; npm install --legacy-peer-deps
-    - run: cd lib; npm install
-    - run: cd backend; npm install
-    - run: cd e2; npm install --legacy-peer-deps
+    - run: cd app; yarn install
+    - run: cd lib; yarn install
+    - run: cd backend; yarn install
+    - run: cd e2; yarn install
     - run: |
         mkdir -p ~/private_keys/
         echo '${{ secrets.APPLE_API_KEY }}' > ~/private_keys/AuthKey_${{ secrets.APPLE_API_KEY_ID }}.p8
-    - run: cd e2; npm run build:release:mac
+    - run: cd e2; yarn run build:release:mac
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         CSC_LINK: ${{ secrets.CSC_LINK }}
