--- a/.github/workflows/installer-windows-parula.yml
+++ b/.github/workflows/installer-windows-parula.yml
@@ -17,13 +17,13 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 20.x
-#        cache: 'npm'
+
     - run: cd app/build; sh parula-brand.sh
-    - run: cd app; npm install --legacy-peer-deps
-    - run: cd lib; npm install
-    - run: cd backend; npm install
-    - run: cd e2; npm install --legacy-peer-deps
-    - run: cd e2; npm run build:release:win
+    - run: cd app; yarn install
+    - run: cd lib; yarn install
+    - run: cd backend; yarn install
+    - run: cd e2; yarn install
+    - run: cd e2; yarn run build:release:win
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
