VSCode settings: Trim trailing whitespace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "a11y-mouse-events-have-key-events": "ignore",
     "a11y-click-events-have-key-events": "ignore",
     "a11y-no-noninteractive-tabindex": "ignore"
-  }
+  },
+  "files.trimTrailingWhitespace": true
 }
