WebApps: Store content: Miro logo

--- a/app/logic/WebApps/webAppStore.json
+++ b/app/logic/WebApps/webAppStore.json
@@ -145,7 +145,7 @@
       },
       "homepage": "https://www.miro.com",
       "start": "https://miro.com/login/",
-      "icon": "https://miro.com/blog/wp-content/uploads/2019/10/icon.svg"
+      "icon": "https://files.readme.io/17d4a23-miro-logo-color-square.png"
     },
     {
       "id": "figma",
