--- a/app/package.json
+++ b/app/package.json
@@ -50,6 +50,7 @@
     "markdown-it": "^14.1.0",
     "matrix-js-sdk": "^30.0.1",
     "olm": "https://packages.matrix.org/npm/olm/olm-3.2.1.tgz",
+    "openpgp": "^6.1.0",
     "password-salt": "^5.0.1",
     "pkce-challenge": "^4.1.0",
     "postal-mime": "^2.4.3",
