--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "@svelteuidev/composables": "^0.14.0",
     "@svelteuidev/core": "^0.14.0",
     "@tiptap/core": "^2.2.2",
+    "@tiptap/extension-bubble-menu": "^2.11.7",
     "@tiptap/extension-code": "^2.2.2",
     "@tiptap/extension-code-block-lowlight": "^2.2.2",
     "@tiptap/extension-image": "^2.2.4",
