Swipe - not working

--- a/app/package.json
+++ b/app/package.json
@@ -57,6 +57,7 @@
     "psl": "https://github.com/lupomontero/psl",
     "stanza": "^12.21.0",
     "svelte-collections": "^1.2.4",
+    "svelte-gestures": "=1.5.2",
     "svelte-icon": "^2.0.0",
     "svelte-navigator": "^3.2.2",
     "timezone-picker-svelte": "^1.0.2",
