--- a/mobile/capacitor.config.json
+++ b/mobile/capacitor.config.json
@@ -1,10 +1,11 @@
 {
   "appId": "im.mustang.capa",
   "appName": "Mustang",
-  "webDir": "dist",
+  "webDir": "../app/dist",
+  "bundleWebRuntime": false,
   "plugins": {
     "SplashScreen": {
-      "launchAutoHide": false
+      "launchAutoHide": true
     }
   }
 }
