--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "start": "vite",
-    "build": "(cd ../app; yarn build); npx cap sync; vite build",
+    "build": "(cd ../app; yarn build); cap sync; vite build; (cd backend; vite build)",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "latest",
+    "rollup-plugin-node-externals": "^8.0.0",
     "vite": "^5.4.2"
   },
   "author": "",
