--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,9 @@
     "utf-8-validate": "^6.0.3",
     "ws": "^8.16.0"
   },
+  "resolutions": {
+    "**/iconv-lite": "^0.6.3"
+  },
   "devDependencies": {
     "electron": "^30.0.2",
     "i18n": "^0.8.3"
