--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "capacitor-app",
-  "version": "1.0.0",
-  "description": "An Amazing Capacitor App",
+  "name": "mustang",
+  "version": "0.8.19-dev",
+  "description": "Mustang - Video conference, chat, mail, calendar, files, contacts",
   "type": "module",
-  "keywords": [
-    "capacitor",
-    "mobile"
-  ],
   "scripts": {
     "start": "vite",
     "build": "(cd ../app; yarn build); cap sync; vite build; (cd backend; vite build)",
@@ -25,6 +21,16 @@
     "rollup-plugin-node-externals": "^8.0.0",
     "vite": "^5.4.2"
   },
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mustang-im/mustang.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mustang-im/mustang/issues"
+  },
+  "author": "Ben Bucksch and Mustang GmbH (https://mustang.im)",
+  "copyright": "Ben Bucksch",
+  "homepage": "https://mustang.im",
+  "license": "EUPL-1.2",
+  "licenseText": "See LICENSE file at top level"
 }
