--- a/app/package.json
+++ b/app/package.json
@@ -44,6 +44,7 @@
     "ini": "^4.1.2",
     "js-sha256": "^0.11.0",
     "ky": "^1.7.4",
+    "livekit-client": "^2.11.4",
     "lodash": "^4.17.21",
     "lowlight": "^3.1.0",
     "lucide-svelte": "^0.475.0",
