Mobile Backend: Make capacitor-nodejs start an ESM module (#583) (#590)
* Try to make capacitor-nodejs start an ESM module - breaks gradle build
* Mobile: Vite: Copy backend code to webDir
* Android: Allow cleartext communications

--- a/mobile/android/app/src/main/AndroidManifest.xml
+++ b/mobile/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <!--
+          TODO: Replace `android:usesCleartextTraffic="true"`
+          with https://developer.android.com/privacy-and-security/security-config#CleartextTrafficPermitted
+          -->
 
         <activity
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode|navigation"
