Meet: Micro volume meter

--- a/app/package.json
+++ b/app/package.json
@@ -61,6 +61,7 @@
     "svelte-icon": "^2.0.0",
     "timezone-picker-svelte": "^1.0.2",
     "tiptap-extension-resize-image": "^1.2.1",
+    "volume-meter": "^2.0.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
