Mobile: Vite build config

--- a/mobile/capacitor.config.json
+++ b/mobile/capacitor.config.json
@@ -1,7 +1,7 @@
 {
   "appId": "im.mustang.capa",
   "appName": "Mustang",
-  "webDir": "../app/dist",
+  "webDir": "./dist",
   "bundleWebRuntime": false,
   "plugins": {
     "CapacitorNodeJS": {
