--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "build": "npx vite build; (cd backend; npx vite build); npx cap sync",
+    "build": "npx vite build && (cd backend; npm run build); npx cap sync",
     "start-android": "cap run android",
     "start-ios": "cap run ios",
     "preview": "vite preview"
@@ -19,7 +19,7 @@
     "capacitor-nodejs": "https://github.com/hampoelz/capacitor-nodejs/releases/download/v1.0.0-beta.7/capacitor-nodejs.tgz"
   },
   "devDependencies": {
-    "@capacitor/cli": "latest",
+    "@capacitor/cli": "6.1.2",
     "@sentry/vite-plugin": "^3.4.0",
     "@sveltejs/vite-plugin-svelte": "3.0.1",
     "rollup-plugin-node-externals": "^8.0.0",
