Mobile backend: Add prebuild script

--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -5,6 +5,7 @@
   "main": "./index.ts",
   "type": "module",
   "scripts": {
+    "prebuild": "./prebuild.sh",
     "build": "vite build"
   },
   "dependencies": {
