--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,13 +20,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "6.1.2",
-    "@sentry/vite-plugin": "^3.4.0",
-    "@sveltejs/vite-plugin-svelte": "3.0.1",
-    "rollup-plugin-node-externals": "^8.0.0",
-    "svelte": "4.2.0",
-    "vite": "^5.4.2",
-    "vite-plugin-conditional-compile": "^1.4.5",
-    "vite-plugin-node-polyfills": "^0.23.0"
+    "vite": "^5.4.2"
   },
   "repository": {
     "type": "git",
