--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -4,7 +4,13 @@
   "description": "Mustang Mobile Backend",
   "main": "./index.ts",
   "type": "module",
+  "scripts": {
+    "prebuild": "./prebuild.sh",
+    "build": "vite build"
+  },
   "dependencies": {
+    "better-sqlite3": "^11.10.0",
+    "bufferutil": "^4.0.9",
     "vite-plugin-static-copy": "^2.3.1",
     "ws": "^8.16.0"
   },
@@ -12,6 +18,7 @@
     "**/iconv-lite": "^0.6.3"
   },
   "devDependencies": {
+    "@rollup/plugin-esm-shim": "^0.1.8",
     "rollup-plugin-node-externals": "^8.0.0",
     "vite": "^5.4.2"
   },
