--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "build": "(cd ../app; yarn build); npx cap sync; npx vite build; (cd backend; npx vite build)",
+    "build": "./build.sh",
     "start-android": "cap run android",
     "start-ios": "cap run ios",
     "preview": "vite preview"
@@ -19,8 +19,7 @@
     "capacitor-nodejs": "https://github.com/hampoelz/capacitor-nodejs/releases/download/v1.0.0-beta.7/capacitor-nodejs.tgz"
   },
   "devDependencies": {
-    "@capacitor/cli": "latest",
-    "rollup-plugin-node-externals": "^8.0.0",
+    "@capacitor/cli": "6.1.2",
     "vite": "^5.4.2"
   },
   "repository": {
