Mobile Backend: Fork from desktop to mobile

--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -9,8 +9,17 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@radically-straightforward/sqlite": "^1.0.0",
+    "@types/nodemailer": "^6.4.14",
+    "adm-zip": "^0.5.12",
     "better-sqlite3": "^11.10.0",
     "bufferutil": "^4.0.9",
+    "des.js": "^1.0.1",
+    "express": "^4.19.2",
+    "imapflow": "https://github.com/mustang-im/imapflow/",
+    "js-md4": "^0.3.2",
+    "ky": "^1.2.3",
+    "nodemailer": "^6.9.13",
     "vite-plugin-static-copy": "^2.3.1",
     "ws": "^8.16.0"
   },
