--- a/e2/package.json
+++ b/e2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mustang",
-  "version": "0.8.21",
+  "version": "0.8.22-dev",
   "description": "Mustang - Video conference, chat, mail, calendar, files, contacts",
   "main": "./out/main/index.js",
   "type": "module",
