CalDAV, CardDAV: Add first implementation

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "nodemailer": "^6.9.13",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "tsdav": "^2.1.4",
     "utf-8-validate": "^6.0.3",
     "ws": "^8.16.0"
   },
