--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "mustang-frontend",
   "description": "Mustang UI",
   "private": true,
-  "version": "0.8.25",
+  "version": "0.8.26-dev",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
