iOS changes from prototype

--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -5,8 +5,18 @@
   "main": "./index.ts",
   "type": "module",
   "scripts": {
-    "prebuild": "./prebuild.sh",
-    "build": "vite build"
+    "prebuild:android-arm": "MOBILE_ARCH=android-arm ./prebuild.sh",
+    "prebuild:android-arm64": "MOBILE_ARCH=android-arm64 ./prebuild.sh",
+    "prebuild:android-x64": "MOBILE_ARCH=android-x64 ./prebuild.sh",
+    "prebuild:ios-sim": "MOBILE_ARCH=ios-x64-simulator ./prebuild.sh",
+    "prebuild:ios-sim-arm": "MOBILE_ARCH=ios-arm64-simulator ./prebuild.sh",
+    "prebuild:ios-dev": "MOBILE_ARCH=ios-arm64 ./prebuild.sh",
+    "prebuild:android": "yarn prebuild:android-arm64 && yarn prebuild:android-x64",
+    "prebuild:ios": "yarn prebuild:ios-sim && yarn prebuild:ios-sim-arm && yarn prebuild:ios-dev",
+    "prebuild:all": "yarn prebuild:android && yarn prebuild:ios",
+    "build:android": "yarn prebuild:android && vite build",
+    "build:ios": "yarn prebuild:ios && vite build",
+    "build:all": "yarn build:android && yarn build:ios"
   },
   "dependencies": {
     "@radically-straightforward/sqlite": "^1.0.0",
