--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -29,6 +29,7 @@
     "imapflow": "https://github.com/mustang-im/imapflow/",
     "js-md4": "^0.3.2",
     "ky": "^1.2.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
     "vite-plugin-static-copy": "^2.3.1",
     "ws": "^8.16.0"
