--- a/mobile/ios/.gitignore
+++ b/mobile/ios/.gitignore
@@ -11,3 +11,6 @@ capacitor-cordova-ios-plugins
 # Generated Config files
 App/App/capacitor.config.json
 App/App/config.xml
+
+# Compiled backend code
+App/App/nodejs-project
