--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -21,7 +21,6 @@
     "ky": "^1.2.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
-    "vite-plugin-conditional-compile": "^1.4.5",
     "vite-plugin-static-copy": "^2.3.1",
     "ws": "^8.16.0"
   },
@@ -31,7 +30,8 @@
   "devDependencies": {
     "@rollup/plugin-esm-shim": "^0.1.8",
     "rollup-plugin-node-externals": "^8.0.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-conditional-compile": "^1.4.5"
   },
   "author": "Ben Bucksch and  Mustang GmbH (https://mustang.im)",
   "copyright": "Ben Bucksch",
