--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -19,6 +19,7 @@
     "imapflow": "https://github.com/mustang-im/imapflow/",
     "js-md4": "^0.3.2",
     "ky": "^1.2.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
     "vite-plugin-static-copy": "^2.3.1",
     "ws": "^8.16.0"
@@ -29,7 +30,8 @@
   "devDependencies": {
     "@rollup/plugin-esm-shim": "^0.1.8",
     "rollup-plugin-node-externals": "^8.0.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-conditional-compile": "^1.4.5"
   },
   "author": "Ben Bucksch and  Mustang GmbH (https://mustang.im)",
   "copyright": "Ben Bucksch",
