Vis: Show person and connections via email

--- a/app/package.json
+++ b/app/package.json
@@ -62,6 +62,8 @@
     "timezone-picker-svelte": "^1.0.2",
     "tiptap-extension-resize-image": "^1.2.1",
     "tsdav": "^2.1.4",
+    "vis-data": "^8.0.1",
+    "vis-network": "^10.0.1",
     "volume-meter": "^2.0.1",
     "ws": "^8.16.0"
   },
