--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,15 +12,15 @@
     "setup:ios": "cd ios && ./setup-ios.sh"
   },
   "dependencies": {
-    "@capacitor/android": "^7.2.0",
-    "@capacitor/camera": "latest",
-    "@capacitor/core": "latest",
-    "@capacitor/ios": "^7.2.0",
-    "@capacitor/splash-screen": "latest",
+    "@capacitor/android": "^7.0.0",
+    "@capacitor/camera": "^7.0.0",
+    "@capacitor/core": "^7.0.0",
+    "@capacitor/ios": "^7.0.0",
+    "@capacitor/splash-screen": "^7.0.0",
     "capacitor-nodejs": "https://github.com/hampoelz/capacitor-nodejs/releases/download/v1.0.0-beta.9/capacitor-nodejs.tgz"
   },
   "devDependencies": {
-    "@capacitor/cli": "6.1.2",
+    "@capacitor/cli": "^7.0.0",
     "vite": "^5.4.2"
   },
   "repository": {
