--- a/.github/workflows/installer-android.yml
+++ b/.github/workflows/installer-android.yml
@@ -27,7 +27,8 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
       with:
-        gradle-version: '9.0.0'
+        gradle-home-cache-includes: |
+          mobile/android/.gradle
 
     - run: cd app/build; sh mustang-brand.sh
     - run: cd app; yarn install
