--- a/.github/workflows/installer-android.yml
+++ b/.github/workflows/installer-android.yml
@@ -51,12 +51,18 @@ jobs:
         cd mobile/android
         echo -e "storePassword=${{ secrets.KEYSTORE_PASS }}\nkeyPassword=${{ secrets.KEYSTORE_ALIAS_PASS }}\nkeyAlias=${{ secrets.KEYSTORE_ALIAS }}\nstoreFile=$HOME/private_keys/key.jks" > keystore.properties
 
-    - run: cd mobile; yarn build:android:apk
+    - run: cd mobile; yarn build:android
 
-    - name: Upload
+    - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: Installers Android
+        name: mustang.apk
         path: |
-          mobile/android/**/*.apk
-          mobile/android/**/*.aab
+          mobile/android/app/build/outputs/apk/release/app-release.apk
+
+    - name: Upload AAB
+      uses: actions/upload-artifact@v4
+      with:
+        name: mustang.aab
+        path: |
+          mobile/android/app/build/outputs/bundle/release/app-release.apk
