--- a/.github/workflows/installer-android.yml
+++ b/.github/workflows/installer-android.yml
@@ -40,7 +40,7 @@ jobs:
     - run: cd mobile; yarn build
       env:
         ANDROID_LIBNODE: "https://github.com/mustang-im/nodejs-mobile/releases/download/v22.9.0/nodejs-mobile-v22.9.0-android.zip"
-        NODE_OPTIONS: '--max-old-space-size=32768'
+        ANDROID_SDK: --sdk35
         MOBILE_ARCH: 'android-arm64'
 
     - run: |
