Fix TypeScript errors from review of #818

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -27,6 +27,9 @@
     "frontend/**/*.js",
     "frontend/**/*.svelte"
   ],
+  "exclude": [
+    "frontend/**/vite.config.ts"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
