--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-esm-shim": "^0.1.8",
+    "prebuild-for-nodejs-mobile": "https://github.com/mustang-im/prebuild-for-nodejs-mobile.git#update-libnode",
     "rollup-plugin-node-externals": "^8.0.0",
     "vite": "^5.4.2",
     "vite-plugin-conditional-compile": "^1.4.5"
