--- a/.github/workflows/installer-android.yml
+++ b/.github/workflows/installer-android.yml
@@ -62,3 +62,11 @@ jobs:
         name: mustang.aab
         path: |
           mobile/android/app/build/outputs/bundle/release/*.aab
+
+    - name: Add to release
+      uses: softprops/action-gh-release@v2
+      with:
+        files: |
+          mobile/android/app/build/outputs/apk/release/*.apk
+          mobile/android/app/build/outputs/bundle/release/*.aab
+
